260
Same error affects the {{typerep.scala}} test:

{code}
typerep.scala:21: error: type mismatch;
 found   : java.lang.Class[java.io.IOException]
 required: java.lang.Class forSome { type _$$1 }
  @throws(classOf[IOException])
          ^
typerep.scala:29: error: type mismatch;
 found   : java.lang.Class[java.io.IOException]
 required: java.lang.Class forSome { type _$$1 }
  @throws(classOf[IOException])
          ^
typerep.scala:30: error: type mismatch;
 found   : java.lang.Class[java.lang.ClassNotFoundException]
 required: java.lang.Class forSome { type _$$1 }
  @throws(classOf[ClassNotFoundException])
          ^
three errors found
{code}

This test has also been moved to pending until the bug is fixed.
